--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel Moderno</title>
+	<link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="cordel.css">
-    <link rel="shortcut icon" href="/imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<header>
 		<h1>
-			Cordel Modernoaas
+			Cordel Moderno
 		</h1>
 		<p>
 			Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="-blank">Milton Duarte</a>
@@ -30,7 +30,7 @@
 				Vou dizer tudo em poesia.
 			</p>
 		</section>
-		<section class="imagem img01" >
+		<section class="imagem" id="img01" >
 			<p>
 				Não é mais como era antes <br>
 				É tudo abreviado <br>
@@ -62,7 +62,7 @@
 				Decifre esse rabisco.
 			</p>
 		</section>
-		<section class="imagem img02">
+		<section class="imagem" id="img02">
 			<p>
 				Tenho saudade das cartas <br>
 				Escritas com a própria mão <br>
