Atualização pós-revisão

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	</main>
 
 	<footer>
-		<p><spam>&copy <a href="https://github.com/IvambergSilva" target="_blank">Ivamberg Silva</a> - 2022</spam></p>
+		<p>&copy <a href="https://github.com/IvambergSilva" target="_blank">Ivamberg Silva</a> - 2022</p>
 	</footer>
 </body>
 </html>
